welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: Missing closing brace `}' assumed here
override def run() {
^PatternPicture:1: error: expected start of definition
override def run() {
         ^PatternPicture:16: error: expected class or object definition
def faireRed() {
^PatternPicture:28: error: expected class or object definition
def faireGreen() {
^PatternPicture:39: error: expected class or object definition
def faireBlue() {
^PatternPicture:50: error: expected class or object definition
def faireYellow() {
^PatternPicture:61: error: expected class or object definition
def faireMotif() {
^PatternPicture:81: error: expected class or object definition
def faireDoubleMotif(){
^